<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/mostraOpcoesSw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_opcoes" />

    <LinearLayout
        android:id="@+id/selecinarOpcaoLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/txt_select_op"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_uma_op"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/opcaoRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/op_par"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/par"/>
            <RadioButton
                android:id="@+id/op_impar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/impar"/>
        </RadioGroup>
    </LinearLayout>


    <TextView
        android:id="@+id/labelJogadaTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione_jogada"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/jogadaLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/zeroBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/zero"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageButton
            android:id="@+id/umBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/one"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageButton
            android:id="@+id/doisBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/two"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageButton
            android:id="@+id/tresBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/three"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageButton
            android:id="@+id/quatroBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/four"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageButton
            android:id="@+id/cincoBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/five"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelJogadaComputadorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_do_computador"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/jgadaComputadorImg"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:id="@+id/labelResultadoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

</LinearLayout>